Removed usless css, fixed p tag size in intro on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -65,11 +65,6 @@ h3 {
   font-size: 25px !important;
 }
 
-#vb-logo {
-  height: 50px;
-  width: 50px;
-}
-
 .blocco {
   /* margin: 0 8%; */
   padding: 0 8%;
@@ -94,7 +89,6 @@ p {
 /** FINE STILI GLOBALI **/
 
 /** INTRO VIDEO **/
-
 /* CSS for fixed video */
 #video-container {
   position: fixed;
@@ -145,19 +139,6 @@ p {
   padding: 3px 8px;
   transition: background 0.6s ease-in-out, color 0.6s ease-in-out;
 }
-
-/* .header-anchors a {
-  transform: translate3d(0%, 0px, 0px);
-  opacity: 0.6;
-  transition: color 1.25s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s linear,
-    transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.header-anchors a:hover {
-  opacity: 1;
-  transition: color 1.25s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s linear,
-    transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
-} */
 
 .header-anchors a:hover {
   background: white;
@@ -229,8 +210,6 @@ p {
   width: 100%;
   border-top: 1px solid white;
 }
-
-/** FINE STILE FOOTER **/
 
 /** FINE STILE FOOTER **/
 
